@startuml

class CreateProfileUI {
}

class CreateProfileController {
profileList : ProfileList
createProfile(profileName)
}


class ProfileList {
profileList : List<Profile>
getProfileByName(profileName)
createProfile(profileName)
validateProfileName(profileName)
add(newProfile)
}

class Profile {
name : String
}

CreateProfileUI "1" o-- "1" CreateProfileController
CreateProfileController "1" o-- "1" ProfileList
ProfileList "1 " *-- "    *" Profile

@enduml